# physlean-bench

./: .env.example  .gitignore  README.md  build_cslib_audit.sh  build_leanlj_audit.sh  build_physlib_eval_work.sh  pyproject.toml  rc9_last40_traces.txt  rc9_public_section_hits.txt  run_deepseek_prover_v2_cross_domain_pilot_gpu.sh  run_deepseek_prover_v2_smoke_localctx_gpu.sh  run_deepseek_prover_v2_smoke_oracle_gpu.sh  run_deepseek_prover_v2_test_statement_gpu.sh  run_trace_physlean.sh  run_trace_physlean_cpu.sh  run_trace_physlean_cpu_localrepo.sh  run_trace_physlean_week.sh  run_trace_physlean_week_8cpu.sh  run_trace_physlean_week_8cpu_rc12.sh  trace_cslib_automata_rc2.sh  trace_cslib_prefix.sh  trace_cslib_rc1.sh
configs/: deepseek_prover_v2.example.yaml  logging.example.yaml  physlib_source.example.yaml  release_candidate.example.yaml  split_strategy.example.yaml
docs/: benchmark_design.md  dataset_schema.md  experiment_plan.md
scripts/: bootstrap_repo.sh  eval_generated_proofs_replace.py  make_cross_domain_statement_prompts.py  make_local_context_prompts.py  make_oracle_premise_prompts.py  make_physlib_cross_domain_v0.py  make_sample_manifest.py  make_statement_only_test_prompts.py  merge_cslib_bench_v0.py  print_dataset_stats.py  report_cslib_deepseek_result.py  run_deepseek_prover_v2_smoke.py  split_cslib_bench_v0.py
tests/: test_audit_exports.py  test_cli_args.py  test_filtering.py  test_manifests.py  test_preflight.py  test_prompt_builder.py  test_release_packaging.py  test_schemas.py  test_source_scan.py  test_split_logic.py  test_trace_validation.py  (+1 more)
(+92 files in other folders)
